[package]
name = "evm-rpc-test"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"